[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/actors/enemy/boss/walking/1.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Enemies/Boss.gd" type="Script" id=2]
[ext_resource path="res://assets/actors/enemy/boss/standing/2.png" type="Texture" id=3]
[ext_resource path="res://assets/actors/enemy/boss/standing/1.png" type="Texture" id=4]
[ext_resource path="res://assets/actors/enemy/boss/deathanim/2.png" type="Texture" id=5]
[ext_resource path="res://assets/actors/enemy/boss/walking/2.png" type="Texture" id=6]
[ext_resource path="res://assets/actors/enemy/boss/deathanim/1.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 5 ) ],
"loop": false,
"name": "death",
"speed": 1.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "stay",
"speed": 2.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 6 ) ],
"loop": true,
"name": "run",
"speed": 2.5
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 111.9
height = 176.065

[node name="Boss" type="KinematicBody2D" groups=["boss"]]
collision_layer = 4
collision_mask = 11
script = ExtResource( 2 )

[node name="AnimatedBoss" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "stay"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 4
shape = SubResource( 1 )

[node name="kill_boss_zone" type="Area2D" parent="." groups=["boss"]]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D2" type="CollisionShape2D" parent="kill_boss_zone"]
position = Vector2( 0, -10.6908 )
shape = SubResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="kill_boss_zone" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
